Flags scale and distortion problem fixed

--- a/styles.css
+++ b/styles.css
@@ -141,14 +141,14 @@ body {
   width: 100%;
   max-height: 100vh;
   display: flex;
-  flex-direction: rows;
+  flex-direction: row;
   overflow: hidden;
   position: absolute;
   left: 0;
   z-index: -1;
 }
 .flag {
-  width: 100%;
+  width: 50%;
   opacity: 0.1;
 }
 .welcome header {
